welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: type mismatch;
 found   : Unit
 required: Int
  for(i <- 1 to num-2){
        ^