welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array[Int](num+1)
  T(0)=1
  var count = 0
  var valeur =1
  for(i <- 1 to num-2){
    for(j<- 1 to T(i)){
      T(j+count)=valeur
    }
    valeur=i+1
    count= T(i)+count
  }
}